styles.css
:root{
    font-family: 'Montserrat', sans-serif;
}

body{
    background-color: #0093E9;
    background-image: linear-gradient(135deg, #0093E9 0%, #80D0C7 100%);
}

#app{
    width: 100vw;
    height: 100vh;
}

#header{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, .75);
    color: white;
    height: 10%;
    font-size: 2rem;
    font-weight: 600;
    padding: 5px;
}

#main-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 50px;
    height: 80%;
}

input{
    height: 2rem;
    width: 200px;
    background-color: rgba(0, 0, 0, .25);
    color: white;
    border-radius: 25px;
    padding-left: 10px;
    font-size: .9rem;
    border: none;
}

button{
    height: 2rem;
    font-size: 0.9rem;
    width: 100px;
    border-radius: 20px;
    border: none;
    background-color: rgba(0, 0, 0, .25);
    color: white;
}

button:hover{
    background-color: rgba(0, 0, 0, .5);
    cursor: pointer;
}



/* Main weather stuff */
.weather-container{
    margin-top: 20px;
    border-radius: 20px;
    height: auto;
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    color: white;
    background-color: rgba(0, 0, 0, .35);

}

.location{
    font-size: 2rem;
    font-weight: 600;
    color: peachpuff;
}

.current-temp{
    font-size: 3rem;
    font-weight: 600;
}

.feels-like{
    font-size: 1.25rem;
    font-weight: 500;
}

.humidity{
    font-size: 1.25rem;
    font-weight: 500;
}

.weather{
    font-size: 1.25rem;
    font-weight: 500;
}

/* backgrounds */

.clouds{
    background-color: #5b6467;
    background-image: linear-gradient(315deg, #5b6467 0%, #8b939a 74%);
}

